Document initial to step1 guidance